SVY-16811 getUrlForRemoteFile returns url with %2F create URI that transforms to URL. In this way we do not need to encode UTF-8. the URI handles all the special characters